# ftg

./: CMakeLists.txt  LICENSE  README.md
source/: fractal_tree_generator.cpp  fractal_tree_generator.h  main.cpp
